Reads active users from websocket

--- a/app/views/courses.html
+++ b/app/views/courses.html
@@ -36,3 +36,7 @@
         <p><a href="#" ng-click="ping()">Ping connection</a></p>
     </div>
 </div>
+
+<hr />
+
+Active users: <span id="connected_clients"></span>
