--- a/app/views/courses.html
+++ b/app/views/courses.html
@@ -33,10 +33,11 @@
     </div>
     <div class="panel-body">
         <p>Could not retrieve courses list</p>
-        <p><a href="#" ng-click="ping()">Ping connection</a></p>
     </div>
 </div>
 
+<div class="clearfix"></div>
+
 <hr />
 
-Active users: <span id="connected_clients"></span>
+<p><a href="#" ng-click="ping()">Ping connection</a> | Active users: <span id="connected_clients"></span></p>
